# Demo_Camera

./: CMakeLists.txt  ESP_MUXER_ANALYSIS.md  USB_MSC_CONFIG.md  partitions_webserver.csv  sdkconfig  sdkconfig.old
components/INMP441/: CMakeLists.txt  INMP441.c
components/INMP441/include/: INMP441.h
components/LCD_1.69spi/: CMakeLists.txt  cst816t_driver.h  st7789_driver.c  st7789_driver.h
components/MAX98367A/: CMakeLists.txt  MAX98367A.c
components/MAX98367A/include/: MAX98367A.h
components/Video_AVI/: CMakeLists.txt  README.md  Video_AVI.c
components/Video_AVI/include/: Video_AVI.h
components/ap_wifi/: CMakeLists.txt  ap_wifi.c  wifi_manager.c  wifi_manager.h  ws_server.c
components/app_wss_client/: CMakeLists.txt  app_wss_client.c
components/app_wss_client/include/: app_wss_client.h
components/button/: CMakeLists.txt  button.c
components/button/include/: button.h
components/sdio-sdcard/: CMakeLists.txt  sdio-sdcard.c
components/sdio-sdcard/include/: sdio-sdcard.h
components/spi-sdcard/: CMakeLists.txt  spi-sdcard.c
components/spi-sdcard/include/: spi-sdcard.h
main/: App_init.c  App_init.h  CMakeLists.txt  Demo_Camera.c  idf_component.yml
